--- a/agoltools/manifest.json
+++ b/agoltools/manifest.json
@@ -3,7 +3,7 @@
   "version": "0.0.2.0",
   "manifest_version": 3,
   "author": "Paul Skeen",
-  "description": "This is a toolkit to assist in management of ArcGIS Online (AGOL) items using the ArcGIS REST API calls as well as facilitating links to ArcGIS Assistant.",
+  "description": "This is a toolkit to assist in management of ArcGIS Online (AGOL) items as well as facilitating links to ArcGIS Assistant.",
   "icons": {
     "128": "icons/agolassist2128.png"
   },
